--- a/cookbooks/jenkins/.gitignore
+++ b/cookbooks/jenkins/.gitignore
@@ -1,2 +1,21 @@
-metadata.json
+*~
+*#
+.#*
+\#*#
+.*.sw[a-z]
+*.un~
+*.tmp
+*.bk
+*.bkup
+.kitchen.local.yml
+Berksfile.lock
+Gemfile.lock
 
+.bundle/
+.cache/
+.kitchen/
+.vagrant/
+.vagrant.d/
+bin/
+tmp/
+vendor/
